<resources>
    <string name="app_name">Poliția Română - Petiții</string>
    <string name="action_settings">Settings</string>

    <!--region DRAWER -->
    <string name="drawer_item_profile">Profile</string>
    <string name="drawer_item_legislation">Legislation</string>
    <string name="drawer_item_feedback">Send Feedback</string>
    <string name="drawer_item_invite_friends">Invite Friends</string>
    <string name="drawer_item_faq">FAQ</string>
    <string name="drawer_item_about">About</string>
    <!--endregion -->

    <!--region ACTIONS -->
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_save">Save</string>
    <string name="action_next">Next</string>
    <string name="action_send">Send</string>
    <string name="action_done">Done</string>
    <string name="action_new_petition">New Petition</string>
    <!--endregion -->

    <!--region PROFILE -->
    <string name="profile_first_name">First Name</string>
    <string name="profile_last_name">Last Name</string>
    <string name="profile_email">Email</string>
    <string name="profile_cnp">CNP</string>
    <string name="profile_home_address">Home Address</string>
    <string name="profile_county">County</string>
    <string name="profile_phone">Phone (optional)</string>

    <string name="profile_save_changes_title">Save changes?</string>
    <string name="profile_save_changes_message">Your changes will be lost otherwise</string>

    <string name="profile_saving">Saving profile…</string>

    <string name="error_first_name_is_required">First Name is required</string>
    <string name="error_last_name_is_required">Last Name is required</string>
    <string name="error_email_is_required">Email is required</string>
    <string name="error_email_is_invalid">Email is invalid</string>
    <string name="error_confirm_password_is_required">Confirm Password is required</string>
    <string name="error_passwords_do_not_match">Passwords do not match</string>
    <string name="error_password_must_be_6_chars_long">Passwords must be at least 6 characters long</string>
    <string name="error_cnp_is_required">CNP is required</string>
    <string name="error_cnp_is_invalid">CNP is invalid</string>
    <string name="error_address_is_required">Address is required</string>
    <string name="error_phone_is_invalid">Phone number is invalid</string>
    <!--endregion -->

    <string-array name="petition_steps">
        <item>Profile</item>
        <item>Petition Details</item>
    </string-array>

    <!--region ABOUT -->
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="open_source_licenses">Open-source licenses</string>
    <string name="build_version">Build version</string>
    <string name="call_112">In case of emergency, CALL 112</string>
    <!--endregion -->

    <!--region TICKET-->
    <string name="ticket_type">Ticket type</string>
    <string name="add_photos">Add photos</string>
    <string name="send_ticket">Send ticket</string>
    <string name="ticket_address">Ticket Address (optional)</string>
    <string name="description">Description</string>

    <string name="error_description_required">Description is required</string>
    <string name="chooser_title">Send mail using...</string>
    <string name="error_google_play_services">Can\'t find Google Play Services</string>
    <string name="error_place_not_found">Can\'t find this place</string>
    <!--endregion-->

</resources>
