<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/TextAppearance.AppCompat.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ticket_type" />

            <Spinner
                android:id="@+id/ticket_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_normal"
                android:layout_marginRight="@dimen/padding_normal"
                tools:listitem="@android:layout/simple_spinner_dropdown_item" />

        </LinearLayout>

        <TextView
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_photos" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ro.politiaromana.petitie.mobile.android.widget.SquareImageView
                android:id="@+id/image_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_add_black_24dp" />

            <ro.politiaromana.petitie.mobile.android.widget.SquareImageView
                android:id="@+id/image_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_add_black_24dp" />

            <ro.politiaromana.petitie.mobile.android.widget.SquareImageView
                android:id="@+id/image_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_add_black_24dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/address_input_layout"
                style="@style/Widget.Police.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:layout_weight="1"
                android:hint="@string/ticket_address"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/address_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/icon_location"
                android:layout_width="36dp"
                android:layout_height="36dp"
                app:srcCompat="@drawable/ic_location_on_black_56dp" />

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/description_input_layout"
            style="@style/Widget.Police.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:hint="@string/ticket_message"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/description_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|top"
                android:inputType="textMultiLine"
                android:minLines="4"
                tools:ignore="RtlHardcoded" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/send_ticket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_ticket" />

    </LinearLayout>

</layout>